Suspend process and store notifications

--- a/TTDProcessTracker/TTDProcessTracker.vcxproj.filters
+++ b/TTDProcessTracker/TTDProcessTracker.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClInclude Include="FastMutex.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ProcessTracker.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
