--- a/TTDProcessTracker/TTDProcessTracker.vcxproj
+++ b/TTDProcessTracker/TTDProcessTracker.vcxproj
@@ -96,6 +96,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FastMutex.h" />
+    <ClInclude Include="ProcessTracker.h" />
     <ClInclude Include="TTDProcessTracker.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
